--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "http://naveen-k.me/",
+  "homepage": "https://naveen8801.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
